Organize about gallery layout

--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
             </dl>
           </div>
           <div class="about__gallery about-photos fade-in-section">
-            <figure class="about__image">
+            <figure class="about__image about__image--feature">
               <img
                 class="lazy"
                 src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
@@ -122,7 +122,7 @@
                 loading="lazy"
               />
             </figure>
-            <figure class="about__image">
+            <figure class="about__image about__image--secondary">
               <img
                 class="lazy"
                 src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
@@ -131,7 +131,7 @@
                 loading="lazy"
               />
             </figure>
-            <figure class="about__image">
+            <figure class="about__image about__image--secondary">
               <img
                 class="lazy"
                 src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
