Refine about gallery layout

--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
             </dl>
           </div>
           <div class="about__gallery about-photos fade-in-section">
-            <figure class="about__image">
+            <figure class="about__image about__image--primary">
               <img
                 class="lazy"
                 src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
@@ -122,7 +122,7 @@
                 loading="lazy"
               />
             </figure>
-            <figure class="about__image">
+            <figure class="about__image about__image--secondary">
               <img
                 class="lazy"
                 src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
@@ -131,21 +131,12 @@
                 loading="lazy"
               />
             </figure>
-            <figure class="about__image">
+            <figure class="about__image about__image--tertiary">
               <img
                 class="lazy"
                 src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
                 data-src="https://storage.googleapis.com/msgsndr/lneM3M1j3P5i0JYeNK18/media/6905227e9faf0156034d16c8.jpeg"
                 alt="Vintage locomotive photograph in sepia tones"
-                loading="lazy"
-              />
-            </figure>
-            <figure class="about__image">
-              <img
-                class="lazy"
-                src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-                data-src="https://storage.googleapis.com/msgsndr/lneM3M1j3P5i0JYeNK18/media/69052287de82833f821663ee.jpeg"
-                alt="Ice cream dessert display with waffle cones at The Omelette Headquarters"
                 loading="lazy"
               />
             </figure>
